# codex-telegram-bridge

./: .gitignore  README.md  config.e2e.example.toml  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
src/codex_telegram_bridge/: bridge.py  cli.py  codex_rpc.py  config.py  desktop_client.py  diagnostics.py  formatting.py  logging_setup.py  state.py  telegram_api.py
tests/: test_bridge.py  test_diagnostics.py  test_logging.py
tests/e2e/: README.md  USER_FLOWS.md  assertions.py  run_smoke.py  scenarios.py
